--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ agp = "8.7.3"
 coilCompose = "2.7.0"
 converterGson = "2.11.0"
 coreSplashscreen = "1.0.1"
-hiltAndroid = "2.54"
-hiltAndroidCompiler = "2.49"
+hiltAndroid = "2.55"
+hiltAndroidCompiler = "2.55"
 hiltCompiler = "1.2.0"
 kotlin = "2.0.21"
 coreKtx = "1.15.0"
@@ -14,11 +14,11 @@ espressoCore = "3.6.1"
 kotlinxCoroutinesAndroid = "1.10.1"
 kotlinxCoroutinesCore = "1.10.1"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.9.3"
-composeBom = "2024.12.01"
+activityCompose = "1.10.0"
+composeBom = "2025.01.01"
 appcompat = "1.7.0"
 material = "1.12.0"
-navigationCompose = "2.8.5"
+navigationCompose = "2.8.6"
 retrofit = "2.11.0"
 ksp = "2.0.21-1.0.27"
 
@@ -44,7 +44,7 @@ androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version = "1.7.7" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
