--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.9.2"
 coilCompose = "2.7.0"
+constraintlayoutCompose = "1.1.1"
 converterGson = "2.11.0"
 coreSplashscreen = "1.0.1"
 firebaseBom = "33.10.0"
@@ -31,6 +32,7 @@ retrofit = "2.11.0"
 ksp = "2.0.21-1.0.27"
 
 [libraries]
+androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayoutCompose" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltCompiler" }
